// GraphQL mutations - write operations

use async_graphql::*;
use super::schema::MutationRoot;

#[Object]
impl MutationRoot {
    /// Place a new trading order
    async fn place_order(&self, input: PlaceOrderInput) -> Result<OrderResult> {
        // TODO: Call kairos-core via gRPC to place order
        
        Ok(OrderResult {
            success: true,
            order_id: uuid::Uuid::new_v4().to_string(),
            message: "Order placed successfully".to_string(),
        })
    }

    /// Cancel an existing order
    async fn cancel_order(&self, order_id: String) -> Result<OrderResult> {
        // TODO: Call kairos-core via gRPC to cancel order
        
        Ok(OrderResult {
            success: true,
            order_id,
            message: "Order cancelled".to_string(),
        })
    }
}

#[derive(InputObject)]
pub struct PlaceOrderInput {
    pub symbol: String,
    pub side: String, // "BUY" or "SELL"
    pub quantity: f64,
    pub price: Option<f64>,
}

#[derive(SimpleObject)]
pub struct OrderResult {
    pub success: bool,
    pub order_id: String,
    pub message: String,
}
